<resources>
    <string name="app_name">padinfo</string>

    <string name="loginTxt">Inicio de sesión</string>
    <string name="signupTxt">Registro</string>
    <string name="mantenimiento">En mantenimiento</string>

    <string name="more">Más</string>
    <string name="home">Inicio</string>
    <string name="tournamentsList">Torneos</string>
    <string name="playersList">Jugadores</string>
    <string name="gamesList">Partidos</string>
    <string name="profile">Perfil</string>
    <string name="settings">Ajustes</string>
    <string name="infoAbout">Info</string>

    <string name="open_nav">Open Navigation Drawer</string>
    <string name="close_nav">Close Navigation Drawer</string>

    <string name="bienvenida">TEXTO DE BIENVENIDA</string>
    <string name="info">AQUÍ VA LA INFO DE LA APP</string>
    <string name="imgLogo">Logo de la app</string>
    <string name="torneos2023">Listado de Torneos</string>
    <string name="top5">TOP 5 Jugadores/as</string>
    <string name="perfil">Perfil</string>
    <string name="editUsuario">Editar usuario</string>
    <string name="registrarPartidos">Listado de partidos</string>
    <string name="iniciarSesion">INICIAR SESIÓN</string>
    <string name="loginMenu">Iniciar sesión</string>
    <string name="registroUsuario">REGISTRARSE</string>
    <string name="inicioUsuarioInvitado">USUARIO INVITADO</string>
    <string name="logout">Cerrar sesión</string>
    <string name="eliminarCuenta">Eliminar cuenta</string>
    <string name="salir">Salir</string>
    <string name="volver">VOLVER</string>
    <string name="editar">EDITAR</string>
    <string name="eliminar">ELIMINAR</string>
    <string name="cancelar">CANCELAR</string>
    <string name="guardar">GUARDAR</string>
    <string name="rankFem">Ranking femenino</string>
    <string name="rankMasc">Ranking masculino</string>
    <string name="usuario">Usuario:</string>
    <string name="contrasenya">Contraseña:</string>
    <string name="usu">Usuario</string>
    <string name="contra">Contraseña</string>
    <string name="nombre">Nombre:</string>
    <string name="apellidos">Apellidos:</string>
    <string name="email">Email:</string>
    <string name="nombreTxt">Nombre</string>
    <string name="apellidosTxt">Apellidos</string>
    <string name="emailTxt">Email</string>
    <string name="newPartido">AGREGAR PARTIDO</string>
    <string name="eq1">EQUIPO 1</string>
    <string name="eq2">EQUIPO 2</string>
    <string name="puntosEq1">PUNTOS EQUIPO 1</string>
    <string name="puntosEq2">PUNTOS EQUIPO 2</string>
    <string name="set1">SET 1</string>
    <string name="set2">SET 2</string>
    <string name="set3">SET 3</string>
    <string name="nomJugEq1">Nombre jugadores equipo 1</string>
    <string name="nomJugEq2">Nombre jugadores equipo 2</string>
    <string name="numeroCero">0</string>
    <string name="nombreTorneo">Nombre del torneo</string>
    <string name="ciudadTorneo">Ciudad del torneo</string>
    <string name="genero">GÉNERO</string>
    <string name="crearTorneo">Añadir torneo</string>
    <string name="crearJugador">Añadir jugador/a</string>
    <string name="rankPosicion">Posición en el ranking</string>
    <string name="nombreJugador">Nombre del jugador/a</string>
    <string name="puntos">Puntos del jugador/a</string>
    <string name="add_points">Añadir puntos</string>
    <string name="del_points">Borrar puntos</string>
    <string name="tema">Tema oscuro</string>
    <string name="generoMasc">Male</string>

    <string name="filter">Filtro</string>
    <string name="genderMenu">Género</string>
    <string name="genderMascMenu">Masculino</string>
    <string name="genderFemMenu">Femenino</string>
    <string name="listaVaciaPartidos">No hay ningún partido almacenado.</string>
    <string name="titleEDIT_Game">EditarPartido</string>
    <string name="titleCREATE_Game">CrearPartido</string>
    <string name="Respuesta_SI">SI</string>
    <string name="Respuesta_NO">NO</string>
    <string name="ciudad">Ciudad:</string>
    <string name="language">Idioma:</string>
    <string name="darkTheme">Tema oscuro</string>
    <string name="lightTheme">Tema claro</string>
    <string name="dark_Theme_switch">oscuro</string>
    <string name="light_Theme_switch">claro</string>

    <string name="nomJugadores">JUGADORES</string>

    <string-array name="generos">
        <item>MASC</item>
        <item>FEM</item>
    </string-array>

    <string-array name="imagenes">
        <item>Rana</item>
        <item>Gato 1</item>
        <item>Gato 2</item>
        <item>Normal 1</item>
        <item>Nutria</item>
        <item>Perro</item>
        <item>Raton</item>
    </string-array>

    <string-array name="languages">
        <item>Español</item>
        <item>Inglés</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>