<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn = "navigation_view" >
    <group
        android:checkableBehavior="single" >

        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/home" />

        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings"
            android:title="@string/settings" />

        <item
            android:id="@+id/nav_info"
            android:icon="@drawable/ic_info"
            android:title="@string/infoAbout" />

    </group>

    <item
        android:title="">

        <menu>
            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/ic_logout"
                android:title="@string/logout" />

            <item
                android:id="@+id/nav_delete_account"
                android:title="@string/eliminarCuenta"
                android:icon="@drawable/ic_delete_account" />
            <item
                android:id="@+id/nav_leave"
                android:title="@string/salir"
                android:icon="@drawable/ic_leave" />
        </menu>

    </item>

</menu>