<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
        <item
            android:id="@+id/btnMore"
            android:title="@string/more"
            android:icon="@drawable/ic_more"
            app:showAsAction="ifRoom">

                <menu>
                        <item
                            android:id="@+id/itemCerrarSesion"
                            android:title="@string/logout"
                            android:icon="@drawable/ic_logout" />
                        <item
                            android:id="@+id/itemDeleteAccount"
                            android:title="@string/eliminarCuenta"
                            android:icon="@drawable/ic_delete_account" />
                        <item
                            android:id="@+id/itemSalir"
                            android:title="@string/salir"
                            android:icon="@drawable/ic_leave" />
                </menu>

        </item>
</menu>