<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".Fragments.ProfileFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:layout_marginBottom="80dp" >

        <ImageView
            android:id="@+id/imgPerfil"
            android:layout_width="167dp"
            android:layout_height="154dp"
            android:layout_marginTop="30dp"
            app:srcCompat="@drawable/padinfo_logo" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="101dp"
            android:text="@string/nombre"
            android:textSize="25sp"
            android:textColor="@color/black"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txtNombreUsuario"
            android:layout_width="298dp"
            android:layout_height="45dp"
            android:layout_marginTop="5dp"
            android:paddingTop="5dp"
            android:text="@string/nombreTxt"
            android:textColor="@color/black"
            android:textSize="20sp"
            tools:layout_editor_absoluteX="28dp"
            tools:layout_editor_absoluteY="229dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="93dp"
            android:text="@string/apellidos"
            android:textSize="25sp"
            android:textColor="@color/black"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txtApellidos"
            android:layout_width="298dp"
            android:layout_height="45dp"
            android:layout_marginTop="5dp"
            android:paddingTop="5dp"
            android:text="@string/apellidosTxt"
            android:textColor="@color/black"
            android:textSize="20sp"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="444dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="115dp"
            android:text="@string/email"
            android:textSize="25sp"
            android:textColor="@color/black"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txtEmail"
            android:layout_width="298dp"
            android:layout_height="45dp"
            android:layout_marginTop="5dp"
            android:paddingTop="5dp"
            android:text="@string/emailTxt"
            android:textColor="@color/black"
            android:textSize="20sp"
            tools:layout_editor_absoluteX="28dp"
            tools:layout_editor_absoluteY="599dp" />

        <Button
            android:id="@+id/btnEditar"
            android:layout_width="133dp"
            android:layout_height="55dp"
            android:layout_marginTop="50dp"
            android:backgroundTint="@color/blue"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:text="@string/editar"
            android:textColor="#FFFFFF"
            android:textSize="16dp"
            android:textStyle="bold"
            app:cornerRadius="0dp" />


    </LinearLayout>

</FrameLayout>