<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.ActivityMain">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imgApp_login"
            android:layout_width="152dp"
            android:layout_height="159dp"
            android:layout_marginStart="120dp"
            android:layout_marginTop="32dp"
            android:src="@drawable/padinfo_logo" />

        <Switch
            android:id="@+id/swithTema_login"
            android:layout_width="148dp"
            android:layout_height="35dp"
            android:layout_marginStart="120dp"
            android:layout_marginTop="20dp"
            android:paddingStart="10dp"
            android:text="@string/tema"
            android:textColor="#000000"
            android:thumbTint="#03A9F4"
            android:trackTint="#000000"
            tools:ignore="RtlSymmetry,UseSwitchCompatOrMaterialXml" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:layout_marginStart="50dp"
            android:layout_marginTop="20dp"
            android:paddingStart="5dp"
            android:textSize="20sp"
            android:text="@string/usuario"
            android:textColor="@color/black"
            tools:ignore="RtlSymmetry" />

        <EditText
            android:id="@+id/editTxtUsuario_login"
            android:layout_width="295dp"
            android:layout_height="55dp"
            android:layout_marginStart="50dp"
            android:background="@drawable/table_border"
            android:ems="10"
            android:hint="@string/usu"
            android:inputType="text"
            android:paddingStart="10dp"
            android:textColor="#000000"
            android:textColorHint="#353535"
            tools:ignore="RtlSymmetry" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:layout_marginStart="50dp"
            android:layout_marginTop="20dp"
            android:paddingStart="5dp"
            android:textSize="20sp"
            android:text="@string/contrasenya"
            android:textColor="@color/black"
            tools:ignore="RtlSymmetry" />

        <EditText
            android:id="@+id/editTxtContrasenya_login"
            android:layout_width="297dp"
            android:layout_height="59dp"
            android:layout_marginStart="50dp"
            android:background="@drawable/table_border"
            android:ems="10"
            android:hint="@string/contra"
            android:inputType="textPassword"
            android:paddingStart="10dp"
            android:textColor="#000000"
            android:textColorHint="#353535"
            tools:ignore="RtlSymmetry" />

        <Button
            android:id="@+id/btnIniciarSesion"
            android:layout_width="210dp"
            android:layout_height="55dp"
            android:layout_marginStart="88dp"
            android:layout_marginTop="50dp"
            android:backgroundTint="#4CAF50"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:text="@string/iniciarSesion"
            android:textColor="#FFFFFF"
            android:textSize="18sp"
            android:textStyle="bold|italic"
            app:cornerRadius="0dp" />

        <Button
            android:id="@+id/btnInicioInvitado"
            android:layout_width="210dp"
            android:layout_height="55dp"
            android:layout_marginStart="88dp"
            android:layout_marginTop="30dp"
            android:backgroundTint="#4CAF50"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:text="@string/inicioUsuarioInvitado"
            android:textColor="#FFFFFF"
            android:textSize="18sp"
            android:textStyle="bold|italic"
            app:cornerRadius="0dp" />

        <Button
            android:id="@+id/btnRegistrarse"
            android:layout_width="210dp"
            android:layout_height="55dp"
            android:layout_marginStart="88dp"
            android:layout_marginTop="30dp"
            android:backgroundTint="#2196F3"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:text="@string/registroUsuario"
            android:textColor="#FFFFFF"
            android:textSize="18sp"
            android:textStyle="bold|italic"
            app:cornerRadius="0dp" />


    </LinearLayout>
</ScrollView>