<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.ActivityEdit_Create_Tournament">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal">

        <ImageView
            android:id="@+id/imgTournament"
            android:layout_width="309dp"
            android:layout_height="171dp"
            android:layout_marginTop="60dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:srcCompat="@tools:sample/avatars" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="101dp"
            android:text="@string/nombre"
            android:textSize="25sp"
            android:textColor="@color/black"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editTextTournamentCity"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:padding="15dp"
            android:background="@drawable/custom_edit_text"
            android:ems="10"
            android:hint="@string/nombreTxt"
            android:inputType="text"
            android:textColor="@color/black"
            android:textColorHint="@color/grey_hint"
            android:textSize="20sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="107dp"
            android:text="@string/ciudad"
            android:textSize="25sp"
            android:textColor="@color/black"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editTxtTournamentName"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:padding="15dp"
            android:background="@drawable/custom_edit_text"
            android:ems="10"
            android:hint="@string/nombreTorneo"
            android:inputType="text"
            android:textColor="@color/black"
            android:textColorHint="@color/grey_hint"
            android:textSize="20sp" />

        <Button
            android:id="@+id/btnSaveP"
            android:layout_width="133dp"
            android:layout_height="55dp"
            android:layout_marginTop="60dp"
            android:backgroundTint="@color/green_normal_2"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:text="@string/guardar"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold"
            app:cornerRadius="0dp" />

        <Button
            android:id="@+id/btnCancelP"
            android:layout_width="133dp"
            android:layout_height="55dp"
            android:layout_marginTop="30dp"
            android:backgroundTint="@color/red"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:text="@string/cancelar"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold"
            app:cornerRadius="0dp" />

    </LinearLayout>
</ScrollView>