<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/fondo_padel">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="30dp"
            android:elevation="20dp"
            app:cardCornerRadius="30dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="24dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:paddingStart="5dp"
                    android:text="@string/signupTxt"
                    android:textAlignment="center"
                    android:textColor="@color/green_normal"
                    android:textSize="36sp"
                    android:textStyle="bold"
                    tools:ignore="RtlSymmetry" />

                <ImageView
                    android:id="@+id/imgApp2"
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:layout_marginTop="20dp"
                    tools:srcCompat="@tools:sample/avatars"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:layout_marginTop="30dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="@string/usuario"
                        android:textSize="18sp"
                        android:gravity="center" />

                    <EditText
                        android:id="@+id/editTxtUser_signup"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginStart="42dp"
                        android:background="@drawable/custom_edit_text"
                        android:ems="10"
                        android:hint="@string/usu"
                        android:inputType="text"
                        android:padding="10dp"
                        android:textColor="@color/black"
                        android:textColorHighlight="@color/cardview_dark_background"
                        android:textColorHint="#353535" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="@string/contrasenya"
                        android:textSize="18sp"
                        android:gravity="center" />

                    <EditText
                        android:id="@+id/editTxtPassword_signup"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginStart="10dp"
                        android:background="@drawable/custom_edit_text"
                        android:ems="10"
                        android:hint="@string/contra"
                        android:inputType="textPassword"
                        android:padding="10dp"
                        android:textColor="@color/black"
                        android:textColorHighlight="@color/cardview_dark_background"
                        android:textColorHint="#353535" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="@string/nombre"
                        android:textSize="18sp"
                        android:gravity="center" />

                    <EditText
                        android:id="@+id/editTxtName_signup"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginStart="38dp"
                        android:background="@drawable/custom_edit_text"
                        android:ems="10"
                        android:hint="@string/nombreTxt"
                        android:padding="10dp"
                        android:textColor="@color/black"
                        android:textColorHighlight="@color/cardview_dark_background"
                        android:textColorHint="#353535" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="@string/apellidos"
                        android:textSize="18sp"
                        android:gravity="center" />

                    <EditText
                        android:id="@+id/editTxtLastName_signup"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginStart="29dp"
                        android:background="@drawable/custom_edit_text"
                        android:ems="10"
                        android:hint="@string/apellidosTxt"
                        android:padding="10dp"
                        android:textColor="@color/black"
                        android:textColorHighlight="@color/cardview_dark_background"
                        android:textColorHint="#353535" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="@string/email"
                        android:textSize="18sp"
                        android:gravity="center" />

                    <EditText
                        android:id="@+id/editTxtEmail_signup"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginStart="60dp"
                        android:background="@drawable/custom_edit_text"
                        android:ems="10"
                        android:hint="@string/emailTxt"
                        android:padding="10dp"
                        android:inputType="textEmailAddress"
                        android:textColor="@color/black"
                        android:textColorHighlight="@color/cardview_dark_background"
                        android:textColorHint="#353535" />

                </LinearLayout>

                <Button
                    android:id="@+id/btnRegistroNuevoUsuario"
                    android:layout_width="210dp"
                    android:layout_height="55dp"
                    android:layout_marginTop="25dp"
                    android:insetTop="0dp"
                    android:insetBottom="0dp"
                    android:text="@string/registroUsuario"
                    android:textColor="#FFFFFF"
                    android:textSize="18sp"
                    android:textStyle="bold|italic"
                    app:cornerRadius="20dp" />

                <Button
                    android:id="@+id/btnCancelRegistro"
                    android:layout_width="210dp"
                    android:layout_height="55dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:insetTop="0dp"
                    android:insetBottom="0dp"
                    android:text="@string/cancelar"
                    android:textColor="#FFFFFF"
                    android:textSize="18sp"
                    android:textStyle="bold|italic"
                    app:cornerRadius="20dp" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </LinearLayout>

</ScrollView>